# medusa-gen.rs

./: Cargo.toml  readme.MD
src/: main.rs
templates/: contract.sol
