[package]
authors = ["Simon Something <drgonogo@defi.sucks>"]
name = "medusa-gen"
description = "Generate a set of contracts for Medusa test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "medusa-gen"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
clap = { version = "4.5.20", features = ["derive"] }
